# Group8_2022_Block4

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
output/: analysis_all_tweets.csv  analysis_sums.csv  analysis_tokens_sentiments.csv  clean_tweets.csv  tokens_sentiments.json  tweets_analysis.json  tweets_response.json
output/media/: sample_photos.txt
src/tweetlytics/: tweetlytics.py
tests/: for_hash_plot.csv  test_plot_freq.py  test_senti_viz.py  test_tweet_senti_analys.py  test_tweetlytics.py
tests/output/: all_tweets.json  analysis_sentiment_group.csv  analysis_top_tweets.csv  sentiment_group_detail_json.json  top_tweets.json  tweets_response.csv  tweets_sums.json
