[tool.poetry]
name = "tweetlytics"
version = "0.1.0"
description = "Retrieves tweets on a required topic and timeframe using the official twitter API, stores them as a .json and .csv file, performs data cleaning, data analysis and plotting."
authors = ["DSCI_524_2022_Group8"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
altair = "^4.2.0"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
arrow = "^1.2.1"
tweepy = "^4.4.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
